[metadata]
name = glue-wwt
author = Thomas Robitaille
author_email = thomas.robitaille@gmail.com
license = BSD 3-Clause License
license_file = LICENSE
url = https://github.com/glue-viz/glue-wwt
description = Glue WorldWide Telescope plugin
long_description = file: README.rst

[options]
zip_safe = False
python_requires = >=2.7
packages = find:
install_requires =
    numpy
    glue-core>=0.14
    qtpy
    astropy
    pywwt>=0.5.3

[options.package_data]
glue_wwt.viewer = *.ui, *.html, *.js, *.png

[options.entry_points]
glue.plugins =
    wwt = glue_wwt:setup

[options.extras_require]
test =
    pytest
qt =
    PyQt5;python_version>="3"
    PyQtWebEngine;python_version>="3"
