[metadata]
name = glue-wwt
author = Thomas Robitaille
author_email = thomas.robitaille@gmail.com
license = BSD 3-Clause License
license_file = LICENSE
url = https://github.com/glue-viz/glue-wwt
description = Glue WorldWide Telescope plugin
long_description = file: README.rst

[options]
zip_safe = False
python_requires = >=3.8
packages = find:
setup_requires = setuptools_scm
install_requires =
    numpy
    glue-core>=1.0
    echo
    astropy
    pywwt>=0.21.0

[options.package_data]
glue_wwt.viewer = *.ui, *.html, *.js, *.png
glue_wwt.viewer.tests = data/*.glu

[options.entry_points]
glue.plugins =
    wwt = glue_wwt:setup

[options.extras_require]
test =
    pytest
    pytest-cov
    mock
    qtpy
    glue-qt
qt =
    qtpy
    glue-qt
    PyQt5;python_version>="3"
    PyQtWebEngine;python_version>="3"
